--- a/src/styles/Filter.css
+++ b/src/styles/Filter.css
@@ -168,14 +168,17 @@
   }
 
   .dropdown-content {
-    display: none;
-    position: relative;
+    position: fixed;
     background-color: #fff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 1001;
     overflow-y: auto;
     height: 250px;
+  }
+
+  .select-chip .dropdown-content{
+    height: 100px;
   }
 
   .dropdown-content div {
@@ -189,9 +192,4 @@
 
   .dropdown-content div:hover {
     background-color: #f1f1f1
-  }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-    position: fixed;
   }
